frontend/src/assets/scss/index/main.scss
header.headerNoPanel {
  background: $primary;
  height: 50px;
  position: fixed;
  top: 0;
  width: 100%;
  nav{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 100%;
    span.IconBoxButton {
      padding-right: 5px
    }
  }
}

.BoxPageIndex {
  main {
    margin-top: 80px;
    .HeadMain {
      display: flex;
      flex-direction: column;
      align-items: center;
      .IconBoxIndex {
        padding: 10px;
        background: $primary;
        @include border-radius(100px);
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .TitleIndex {
        margin-top: 10px;
        font-weight: 100;
        font-style: italic;
        font-size: 20px;
      }
    }

    form {
      margin-top: 50px;
      display: flex;
      flex-direction: column;
      align-items: center;
      div.space {
        margin-bottom: 40px;
        input {
          width: 250px;
        }
      }

      div.Copyright {
        display: flex;
        flex-direction: column;
        opacity: 0.5;
        margin-bottom: 30px;
        text-align: center;
      }
    }
  }
}

